--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@types/node": "^14.11.1",
     "axios": "^0.20.0",
-    "request-ip": "^2.1.3",
-    "xml2js": "^0.4.23"
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "@azure/functions": "^1.0.2-beta2",
